Add partials and destroy action

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -52,7 +52,7 @@
 
     <footer>
         <p>This page was made by: Karl Magsig, Web programming guru in training.</p>
-        <%= link_to 'To the About page', about_path %>
+        <%= link_to 'To the About page ', about_path %> | <%= link_to ' List articles', articles_path %>
 
     </footer>
 
